--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.0"
-=======
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
->>>>>>> 64a56274e8676ac43546ae66665149bbabce0b6d
+    "morgan": "^1.10.0"
   }
 }
